# smol-engine

./: Cargo.toml  README.md
.cargo/: config
light/: light_cube.mtl
shader_files/: depth_map_frag.shader  depth_map_vertex.shader  light_vertex_shader.shader  post_frag.shader  skybox_vertex.shader  vertex_shader.shader
src/: assets.rs  camera.rs  cube.rs  engine.rs  fragment_shader.shader  macros.rs  main.rs  mesh.rs  model.rs  physics.rs  post_frag.shader  post_vertex.shader  shader.rs
src/components/: mod.rs
src/graphics/: basic_renderer.rs  cube_shadow_texture.rs  heightmap.rs  mod.rs  model.rs  point_light.rs  shader.rs  shadow_texture.rs  skybox_texture.rs  texture.rs  tmp.rs  uniform_bind_groups.rs  water_map.rs  wgpu_renderer.rs
src/graphics/lighting/: directional_light.rs  mod.rs  point_light.rs
src/graphics/pass/: light_object_pass.rs  mod.rs  model_pass.rs  shadow_pass.rs  skybox_pass.rs  ui_pass.rs  water_environment_pass.rs  water_pass.rs  water_surface_pass.rs
src/lighting/: directional_light.rs  mod.rs  point_light.rs  spotlight.rs
src/shader_files/: fragment.shader  fs_light.shader  fs_model.shader  fs_shadow.shader  fs_skybox.shader  fs_watermap.shader  fs_watersurface.shader  post_frag.shader  vertex.shader  vs_light.shader  vs_model.shader  vs_shadow.shader  vs_skybox.shader  vs_watermap.shader  vs_watersurface.shader  wgpu.frag  wgpu.vert
src/shaders/: light_shader.rs  mod.rs  model_shader.rs  outline_shader.rs  shadow_depth_shader.rs  skybox_shader.rs
src/state/: mod.rs
src/states/: basic_state.rs  mod.rs
test/: Rewire_Custom_Orb_Chandelier.mtl
