[package]
name = "smol-engine"
version = "0.1.0"
authors = ["Oskar Nehlin <oskar.d.nehlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 2
debug = true


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
jemallocator = "0.3"
nalgebra = "0.20"
thiserror = "1.0"
ncollide3d = "0.22"
nphysics3d = "0.14"
once_cell = "1.3"
crossbeam-utils = "0.7"
crossbeam-channel = "0.4"
wgpu = "0.5"
glsl-to-spirv = "0.1"
anyhow = "1.0"
glfw = "0.36"
image = "0.19"
tobj = "0.1"
futures = "0.3"
zerocopy = "0.3"
legion =  {git = "https://github.com/TomGillen/legion.git"}

