[package]
name = "smol-engine"
version = "0.1.0"
authors = ["Oskar Nehlin <oskar.d.nehlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 2
debug = true


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
jemallocator = "0.3"
nalgebra = "0.21"
thiserror = "1.0"
ncollide3d = "0.23"
nphysics3d = "0.16"
once_cell = "1.4"
imgui = "0.4.0"
wgpu = {git = "https://github.com/gfx-rs/wgpu-rs.git", features = ["trace"]}
glsl-to-spirv = "0.1"
anyhow = "1.0"
glfw = "0.39"
image = "0.19"
tobj = "2.0"
futures = "0.3"
smol-renderer = {git = "https://github.com/Nehliin/smol-renderer.git"}
legion =  {git = "https://github.com/TomGillen/legion.git", rev = "e2c7363e"}

