[package]
name = "smol-engine"
version = "0.1.0"
authors = ["Oskar Nehlin <oskar.d.nehlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 2
debug = 1


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
jemallocator = "0.3"
nalgebra = "0.22.0"
thiserror = "1.0"
ncollide3d = "0.24.0"
nphysics3d = "0.17.0"
once_cell = "1.4"
wgpu = {git = "https://github.com/gfx-rs/wgpu-rs.git", rev = "15f051dd778ed73ad6ea6846578bdd367985366b", features = ["trace"]}
glsl-to-spirv = "0.1"
anyhow = "1.0"
glfw = "0.39"
image = "0.19"
tobj = "2.0"
futures = "0.3"
smol-renderer = {git = "https://github.com/Nehliin/smol-renderer.git"}
legion =  {git = "https://github.com/TomGillen/legion.git", rev = "e2c7363e"}

